--- a/Coursework/CSS_SearchTask.css
+++ b/Coursework/CSS_SearchTask.css
@@ -132,8 +132,8 @@ th, td {
 
 /* Adjusting styles for the search form */
 .createTaskForm {
-    width: 80%; /* Adjust the width as needed */
-    max-width: 600px; /* Set a maximum width if desired */
+    width: 80%; 
+    max-width: 600px; 
     position: absolute;
     top: 50%;
     left: 50%;
@@ -170,5 +170,5 @@ th, td {
 }
 
 .enter-btn:hover {
-    background: #16ab00; /* Adjust hover color as desired */
+    background: #16ab00; 
 }
