--- a/Coursework/CSS_createTask.css
+++ b/Coursework/CSS_createTask.css
@@ -43,7 +43,8 @@
 /* CSS for the create and view task pages, mainly just ensures it is somewhat presentable on the screen */
 
 .createTaskForm {
-    width: 380px;
+    width: 500px;
+    height: 350px;
     position: absolute; 
     top: 50%; 
     left: 50%; 
@@ -62,6 +63,7 @@
 
 .input-field {
     width: calc(100% - 20px); 
+    height: 50px;
     margin-bottom: 10px;
     border-left: 0;
     border-top: 0;
@@ -72,7 +74,8 @@
 }
 
 .enter-btn {
-    width: calc(100% - 20px);
+    width: calc(100% - 40px); 
+    padding: 15px 15px; 
     cursor: pointer;
     display: block;
     margin: auto;
@@ -80,6 +83,8 @@
     border: 0;
     outline: none;
     border-radius: 30px;
+    color: rgb(3, 2, 2); 
+    font-size: 18px; 
 }
 
 
