--- a/Coursework/CSS_tasks.css
+++ b/Coursework/CSS_tasks.css
@@ -3,12 +3,9 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-}
 
 /* This creates a box which serves as a background for all of the screens */
 .box {
@@ -17,20 +14,9 @@ body, html {
     position: absolute;
     background: #191970;
     position: relative;
+    overflow: auto;
 }
 
-.task-container {
-    height: 500px; 
-    overflow-y: auto;
-    position: absolute;
-    top: 100px; 
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 0px;
-    border-radius: 0px;
-    background-color: #191970;
-    width: calc(100% - 20px); 
-}
 
 .createTaskForm {
     border-collapse: collapse;
@@ -103,36 +89,18 @@ th {
     background-color: #ffffff;
 }
 
-/* Form styles */
-.userform {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-/* Button styles */
-button {
-    padding: 8px 12px;
-    background-color: #333;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.button:hover {
-    background-color: #aaaaaa; 
-}
 
 
 .task-container {
+    height: 100%;
+    position: absolute;
+    top: 20%; 
+    left: 50%;
+    transform: translateX(-50%);
+    padding-bottom: 20%;
+    border-radius: 0px;
+    background-color: #191970;
     width: 80%;
-    aspect-ratio: 3/1;
-    padding: 100px 0;
-    margin: 100px;
-    border: solid black 2px;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
 }
 
 /* Task date button styles */
@@ -166,7 +134,7 @@ button {
 /* Task complete button styles */
 .complete-button {
     padding: 8px 12px;
-    background-color: rgb(81, 255, 0); 
+    background-color: #4BB543; 
     color: white;
     border: none;
     border-radius: 4px;
@@ -174,13 +142,13 @@ button {
 }
 
 .complete-button:hover {
-    background-color: #48ff0079; 
+    background-color: #8fec80; 
 }
 
 /* Delete button styles */
 .delete {
     padding: 8px 12px;
-    background-color: #ff3333; /* Red color */
+    background-color: #ED4337; /* Red color */
     color: white;
     border: none;
     border-radius: 4px;
@@ -222,7 +190,7 @@ table.createTaskForm tr:first-child {
 }
 
 .enter-btn:hover {
-    background: #16ab00; 
+    background: #8fec80; 
 }
 
 /* CSS for the pop-up */
