Some final features
Users can now export PDF files of the tasks
Added admin pins to signup page
Added supervisor pin to task completion
Ordered tasks by due date
Overdue tasks change colour

--- a/Coursework/CSS_tasks.css
+++ b/Coursework/CSS_tasks.css
@@ -228,3 +228,13 @@ table.createTaskForm tr:first-child {
     text-decoration: none;
     cursor: pointer;
 }
+
+/* Styling for overdue task dates */
+.task-date.overdue {
+    color: red; /* Change text color to red for overdue tasks */
+    /* Add any other styling you want for overdue tasks */
+}
+
+.exportButton{
+    background-color: #888;
+}
