--- a/Coursework/CSS_createTask.css
+++ b/Coursework/CSS_createTask.css
@@ -55,12 +55,12 @@
     border-radius: 10px; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
 }
-
+/* CSS for headings in the create task page */
 .heading {
     text-align: center;
     margin-top: 0;
 }
-
+/* CSS for input fields in the create task page  */
 .input-field {
     width: calc(100% - 20px); 
     height: 50px;
@@ -73,6 +73,7 @@
     background: transparent;
 }
 
+/* CSS for the submit/enter button in the create task page */
 .enter-btn {
     width: calc(100% - 40px); 
     padding: 15px 15px; 
